--- a/input.css
+++ b/input.css
@@ -7,7 +7,7 @@
     --white: 0, 0%, 100%;
     --line-color:0, 0%, 90%;
     --total-bg: 0, 0%, 98%;
-
+    --success:137, 53%, 43%;
     --dark: 0, 0%, 13%;
     --light-grey: 0, 0%, 52%;
     --grey: 240, 13%, 56%;
