--- a/input.css
+++ b/input.css
@@ -34,19 +34,19 @@
 
 @layer components{
   .item-section {
-    @apply mt-8 flex p-4 gap-x-4 bg-cream m-4 flex-row flex-nowrap rounded-[10px]  relative z-10;
+    @apply flex w-full h-[8rem] p-4 gap-x-4 bg-cream justify-center md:justify-start items-center flex-row flex-nowrap rounded-[10px]  relative z-10;
   }
   .item-type {
-    @apply text-[1.3rem] font-frauncesFont text-grey tracking-widest;
+    @apply text-[1rem] md:text-[1.3rem] font-frauncesFont text-grey tracking-widest;
   }
   .item-description {
-    @apply font-frauncesFont whitespace-nowrap text-2xl font-semibold;
+    @apply font-frauncesFont text-xl md:text-2xl  font-semibold;
   }
   .item-cost {
     @apply font-frauncesFont font-normal text-xl;
   }
   .add-to-cart-btn{
-    @apply rounded-[10px] mx-4 text-white p-4
+    @apply rounded-[10px]  text-white py-2 px-4
   }
   .increment-btn{
     @apply px-2 border-lineColor border-4
